5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1716_2507.log
== TEST (2019-05-15 17:55:49) 
-- CODE:
p=int(input("quantidade inicia: "))
per=float(input("% : ")
meses=0
while(p>0 and p<8000):
	r=int(input("reirado: "))
	p = p + p*(per/100) - r
	meses = meses + 1
	if(p<=r):
		e="ZERO"
	if(p>=8000):
		e="MAXIMO"
print(e)
print(meses)
	
-- ERROR:
File "XXXX", line 3
    meses=0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:56:14) 
-- CODE:
p=int(input("quantidade inicia: "))
per=float(input("% : ")
meses = 0
while(p>0 and p<8000):
	r=int(input("reirado: "))
	p = p + p*(per/100) - r
	meses = meses + 1
	if(p<=r):
		e="ZERO"
	if(p>=8000):
		e="MAXIMO"
print(e)
print(meses)
	
-- ERROR:
File "XXXX", line 3
    meses = 0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:56:37) 
-- CODE:
p=int(input("quantidade inicia: "))
per=float(input("% : ")
mes = 0
while(p>0 and p<8000):
	r=int(input("reirado: "))
	p = p + p*(per/100) - r
	mes = mes + 1
	if(p<=r):
		e="ZERO"
	if(p>=8000):
		e="MAXIMO"
print(e)
print(mes)
	
-- ERROR:
File "XXXX", line 3
    mes = 0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:57:27) 
-- CODE:
p=int(input("quantidade inicia: "))
per=float(input("% : ")
c = 0
while(p>0 and p<8000):
	r=int(input("reirado: "))
	p = p + p*(per/100) - r
	c = c + 1
	if(p<=r):
		e="ZERO"
	if(p>=8000):
		e="MAXIMO"
print(e)
print(c)
	
-- ERROR:
File "XXXX", line 3
    c = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:57:42) 
-- CODE:
p=int(input("quantidade inicia: "))
per=float(input("% : ")
c = 0
while(p>0 and p<8000):
	r=int(input("reirado: "))
	p = p + p*(per/100) - r
	c = c + 1
	if(p<=r):
		e="ZERO"
	if(p>=8000):
		e="MAXIMO"
print(e)
print(c)
	
-- ERROR:
File "XXXX", line 3
    c = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:58:03) 
-- CODE:
p=int(input("quantidade inicia: "))
per=float(input("% : ")
c=0
while(p>0 and p<8000):
	r=int(input("reirado: "))
	p = p + p*(per/100) - r
	c = c + 1
	if(p<=r):
		e="ZERO"
	if(p>=8000):
		e="MAXIMO"
print(e)
print(c)
	
-- ERROR:
File "XXXX", line 3
    c=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:58:29) 
-- CODE:
p=int(input("quantidade inicia: "))
per=float(input("% : ")
c = 0
while(p>0 and p<8000):
	r=int(input("reirado: "))
	p = p + p*(per/100) - r
	c = c + 1
	if(p<=r):
		e="ZERO"
	if(p>=8000):
		e="MAXIMO"
print(e)
print(c)
	
-- ERROR:
File "XXXX", line 3
    c = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:58:49) 
-- CODE:
p=int(input("quantidade inicia: "))
per=float(input("% : ")
c = 0
while(p>0 and p<8000):
	r=int(input("reirado: "))
	p = p + p*(per/100) - r
	c = c + 1
	if(p<=r):
		e="ZERO"
	if(p>=8000):
		e="MAXIMO"
print(e)
print(c)	
-- ERROR:
File "XXXX", line 3
    c = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:01:37) 
-- CODE:
p=int(input("quantidade inicia: "))
per=float(input("% : "))
c = 0
while(p>0 and p<8000):
	r=int(input("reirado: "))
	p = p + p*(per/100) - r
	c = c + 1
	if(p<=r):
		e="ZERO"
	if(p>=8000):
		e="MAXIMO"
print(e)
print(c)	
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:02:08) 
-- CODE:
p=int(input("quantidade inicia: "))
per=float(input("% : "))
c = 0
while(p>0 and p<8000):
	r=int(input("reirado: "))
	p = p + p*(per/100) - r
	c = c + 1
	if(p<=r):
		e="ZERO"
	if(p>=8000):
		e="MAXIMO"
print(e)
print(c)	
-- EXECUTION TIME:
0.122364
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
